# Discord-Gotcha-Tracker

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Gotcah.xlsx  Makefile  README.md  build.txt  listscore.cpp
src/: .main.h.kate-swp  getmembers.cpp  invalid.txt  listscores.cpp  listscores.h  main.cpp  main.h  searchmessages.cpp  searchmessages.h  updatespreadsheet.cpp  updatespreadsheet.h
